--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <ul class="menu">
         <li><a href="#home"class="menu-btn">Home</a></li>
         <li><a href="#about"class="menu-btn">About me</a></li>
-        <li><a href="#skills"class"menu-btn">Skills</a></li>
+        <li><a href="#skills"class="menu-btn">Skills</a></li>
         <li><a href="#portfolio"class="menu-btn">Portfolio</a></li>
         <li><a href="#contact"class="menu-btn">Contact me</a></li>
       </ul>
@@ -29,7 +29,7 @@
  <br>
  <br>
  <br>
-  <!-- home sezione -->
+  <!-- sezione home -->
  <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -70,21 +70,21 @@
 <br>
 <br>
 <br>
-<!---zona skills-->
+<!---sezione skills-->
 <section class="skills" id="skills">
         <div class="max-width">
           <div class="wrapper"></div>
           <div class="container"></div>
             <div class="box">
               <h2 class="title">Skills</h2>
-              <img src="images/html-5.png">
-              <img src="images/css-3.png">
-              <img src="images/Bootstrap.png">
-              <img src="images/sass.png">
+              <img src="images/html-5.png"alt="logo html">
+              <img src="images/css-3.png"alt="logo css">
+              <img src="images/Bootstrap.png"alt="logo boostrap">
+              <img src="images/sass.png"alt="logo sass">
               <p> My skills & experiences.</p>
              </div>
            </div>
-  <!--zona portfolio-->
+  <!--sezione portfolio-->
   <br>
   <br>
   <br>
@@ -102,7 +102,7 @@
   <br>
   <br>
   <br>
-      <!-- zona contact -->
+      <!-- sezione contact -->
       <section class="contact" id="contact">
                <div class="max-width">
                 <h2 class="title">Contact me</h2>
@@ -133,7 +133,7 @@
    <br>
    <br>
    <br>
-  <!-- zona footer -->
+  <!-- sezione footer -->
   <footer>
       <span><i class="fab fa-github"></i><a href="https://github.com/DPdotexe">DP</a> | <span class="copyright"></span> ©2022 All rights reserved.</span>
       <br>
