--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <h2 class="title">Skills</h2>
               <img src="images/html-5.png"alt="logo html">
               <img src="images/css-3.png"alt="logo css">
-              <img src="images/Bootstrap.png"alt="logo boostrap">
+              <img src="images/Bootstrap.png"alt="logo bootstrap">
               <img src="images/sass.png"alt="logo sass">
               <p> My skills & experiences.</p>
              </div>
