--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
               <img src="images/css-3.png"alt="logo css">
               <img src="images/Bootstrap.png"alt="logo bootstrap">
               <img src="images/sass.png"alt="logo sass">
+              <br>
+              <br>
               <p> My skills & experiences.</p>
              </div>
            </div>
@@ -99,7 +101,9 @@
       <div class="container"></div>
       <div class="box">
         <h2 class="title">Portfolio</h2>
-    <img src="images/workinprogress.png">
+    <img src="images/workinprogress.png"alt="work in progress">
+     <br>
+     <br>
     <p>This section is work in progress for now, but I will fill it with a lot of projects very soon ;)</p>
   </div>
     </div>
