--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@600&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-   <link rel="stylesheet"href="styles.css">
-  <title>Daniele Puleri</title>
+   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+   <link rel="icon" type="image/x-icon" href="images/favicon.ico">  <!--favicon della guida-->
+   <link rel="stylesheet"href="css/styles.css">
+  <h1><title>Daniele Puleri</title></h1>
 </head>
 <body>
   <header>
@@ -18,24 +20,24 @@
           </label>
          <ul class="menu">
         <li><a href="#home"class="menu-btn">Home</a></li>
-        <li><a href="#about"class="menu-btn">About me</a></li>
+        <li><a href="about.html"class="menu-btn">About</a></li>
         <li><a href="#skills"class="menu-btn">Skills</a></li>
         <li><a href="#portfolio"class="menu-btn">Portfolio</a></li>
-        <li><a href="#contact"class="menu-btn">Contact me</a></li>
+        <li><a href="contact.html"class="menu-btn">Contact</a></li>
       </ul>
     </nav>
   </header>
- <br>
- <br>
- <br>
- <br>
-  <!-- sezione home -->
+  <br>
+  <br>
+  <br>
+    <!-- sezione home -->
  <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Daniele Puleri</div>
-                <div class="text-3">and I'm a Full <span>Stack Developer</span></div>
+                <div class="text-2"><h1>Daniele Puleri</h1></div>
+                <div class="text-3"><h1>and I'm a Full <span>Stack Developer</span></h1></div>
+                <br>
                 <br>
                 <div class="image">
                 <img src="images/daniele.jpg" alt="foto profilo">
@@ -43,48 +45,39 @@
             </div>
         </div>
     </section>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <!--about me sezione-->
-    <section class="about" id="about">
-      <div class="max-width">
-        <div class="wrapper"></div>
-        <div class="container"></div>
-          <div class="box">
-        <h2 class="title">About me</h2>
-        <p>Hi! I'm Daniele Puleri, I am 24 years old and i'm a student of start2impact
-          Thanks to their courses I have improved my programming skills.
-          I love the tech world in every aspect from an early age and especially I have always had a passion for PCs,video-games basically nerd stuff.
-          I have learned some skills like HTML, CSS, Boostrap, SASS and I'm going to
-          learn more and more.
-        </p>
-        </div>
-</section>
 <br>
 <br>
 <br>
-<!---sezione skills-->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+ <!---sezione skills-->
 <section class="skills" id="skills">
-        <div class="max-width">
-          <div class="wrapper"></div>
-          <div class="container"></div>
-            <div class="box">
-              <h2 class="title">Skills</h2>
-              <img src="images/html-5.png"alt="logo html">
-              <img src="images/css-3.png"alt="logo css">
-              <img src="images/Bootstrap.png"alt="logo bootstrap">
-              <img src="images/sass.png"alt="logo sass">
-              <p> My skills & experiences.</p>
-             </div>
-           </div>
-  <!--sezione portfolio-->
+  <div class="max-width">
+    <div class="wrapper"></div>
+    <div class="container"></div>
+      <div class="box">
+        <h2 class="title">Skills</h2>
+        <img src="images/html-5.png"alt="logo html">
+        <img src="images/css-3.png"alt="logo css">
+        <img src="images/Bootstrap.png"alt="logo bootstrap">
+        <img src="images/sass.png"alt="logo sass">
+        <br>
+        <br>
+        <p> My skills & experiences.</p>
+       </div>
+     </div>
+                 <!--sezione portfolio-->
   <br>
   <br>
   <br>
@@ -94,51 +87,32 @@
       <div class="container"></div>
       <div class="box">
         <h2 class="title">Portfolio</h2>
-    <img src="images/workinprogress.png">
+    <img src="images/workinprogress.png" alt="workinprogress">
+    <br>
+    <br>
     <p>This section is work in progress for now, but I will fill it with a lot of projects very soon ;)</p>
   </div>
     </div>
   </section>
-  <br>
-  <br>
-  <br>
-      <!-- sezione contact -->
-      <section class="contact" id="contact">
-               <div class="max-width">
-                <h2 class="title">Contact me</h2>
-                  <div class="column right">
-                   <form action="#">
-                       <div class="fields">
-                           <div class="field name">
-                               <input type="text" placeholder="Name" required>
-                           </div>
-                           <div class="field email">
-                               <input type="email" placeholder="Email" required>
-                           </div>
-                       </div>
-                       <div class="field">
-                           <input type="text" placeholder="Subject" required>
-                       </div>
-                       <div class="field textarea">
-                           <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
-                       </div>
-                       <div class="button-area">
-                           <button type="submit">Send message</button>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
-   </section>
-   <br>
-   <br>
-   <br>
-  <!-- sezione footer -->
-  <footer>
-      <span><i class="fab fa-github"></i><a href="https://github.com/DPdotexe">DP</a> | <span class="copyright"></span> ©2022 All rights reserved.</span>
-      <br>
-      <br>
-      <span><i class="fa fa-envelope" aria-hidden="true"></i> danielepuleri97@gmail.com </span>
-  </footer>
+   <!-- footer -->
+   <footer>
+    <br>
+    <div class="col-md-3 col-sm-6">
+      <div class="col-md-12 copy"></div>
+            <h4>Socials</h4>
+            <br>
+            <ul class="social-network social-circle">
+             <li><a href="https://github.com/DPdotexe" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
+             <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            </ul>				
+    </div>
+    <br>
+    <div class="row">
+    <div class="col-md-12 copy">
+      <span><p class="text-center">&copy; Copyright 2022 - DP.  All rights reserved.</p></span>
+    </div>
+  </div>
+</footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
