--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                   <textarea cols="30" rows="10" id="message" placeholder="Message..." required></textarea>
               </div>
               <div class="button-area">
-                  <button onclick="sendMail()">Send</button>
+                  <button onclick="sendMail()">Send message</button>
               </div>
           </form>
       </div>
