--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
   <br>
   <div class="col-md-3 col-sm-6">
     <div class="col-md-12 copy"></div>
-          <h4>Socials</h4>
+          <h4><span>Socials</span></h4>
           <br>
           <ul class="social-network social-circle">
            <li><a href="https://github.com/DPdotexe" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
