--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
           <div class="box">
            <h1 class="title">Contact me</h1>
          <div class="column right">
-          <form id="contact-form">
+          <form action="#" id="contact-form">
             <input type="hidden" name="contact_number">
               <div class="fields">
                   <div class="field name">
