--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
               <br>
               <ul class="social-network social-circle">
                <li><a href="https://github.com/DPdotexe" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
-               <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/daniele-p-099008241" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
               </ul>				
       </div>
       <br>
