--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">  <!--favicon della guida-->
-   <link rel="stylesheet"href="css/styles.css">
+   <link rel="stylesheet"href="assets/css/styles.css">
    <h1><title>Daniele Puleri</title></h1>
 </head>
 <body>
