--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@600&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   <link rel="icon" type="image/x-icon" href="images/favicon.ico">  <!--favicon della guida-->
+   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">  <!--favicon della guida-->
    <link rel="stylesheet"href="assets/css/styles.css">
    <h1><title>Daniele Puleri</title></h1>
 </head>
@@ -44,7 +44,7 @@
                 <br>
                 <br>
                 <div class="image">
-                <img src="images/daniele.jpg" alt="foto profilo">
+                <img src="assets/images/daniele.jpg" alt="foto profilo">
                 </div>
             </div>
         </div>
@@ -75,10 +75,10 @@
     <div class="container"></div>
       <div class="box">
         <h2 class="title">Skills</h2>
-        <img src="images/html-5.png"alt="logo html">
-        <img src="images/css-3.png"alt="logo css">
-        <img src="images/Bootstrap.png"alt="logo bootstrap">
-        <img src="images/sass.png"alt="logo sass">
+        <img src="assets/images/html-5.png"alt="logo html">
+        <img src="assets/images/css-3.png"alt="logo css">
+        <img src="assets/images/Bootstrap.png"alt="logo bootstrap">
+        <img src="assets/images/sass.png"alt="logo sass">
         <br>
         <br>
         <p> My skills & experiences.</p>
@@ -97,7 +97,7 @@
       <div class="box">
         <h2 class="title">Portfolio</h2>
     <br>
-    <img src="images/workinprogress.png"alt="work in progress">
+    <img src="assets/images/workinprogress.png"alt="work in progress">
      <br>
      <br>
     <p>This section is work in progress for now, but I will fill it with a lot of projects very soon ;)</p>
