--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@600&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
    <link rel="stylesheet"href="assets/css/styles.css">
   <title>Daniele Puleri</title>
 </head>
