--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@600&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-   <link rel="stylesheet"href="assets/styles.css">
+   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+   <link rel="stylesheet"href="assets/css/styles.css">
    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
@@ -118,7 +118,7 @@
       </div>
     </div>
   </footer>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="assets/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
