--- a/about.html
+++ b/about.html
@@ -41,13 +41,12 @@
       <div class="container"></div>
         <div class="box">
       <h2 class="title">About me</h2>
-      <p>Hi! I'm Daniele Puleri, I am 24 years old and i'm a student of start2impact
-        Thanks to their courses I have improved my programming skills.
+      <p>Hi! I'm Daniele Puleri, I am 24 years old and i'm a Junior Full-Stack Developer
         <br>
         <br>
         I love the tech world in every aspect from an early age and especially I have always had a passion for PCs,video-games basically nerd stuff.
-        I have learned some skills like HTML, CSS, Boostrap, SASS and I'm going to
-        learn more and more.
+        I have learned some skills like HTML, CSS, Boostrap, SASS, Javascript, React.js, Node.js and for database MySQL and MongoDB and I'm going to
+        learn more and more, actually I'll go and learn Angular and Python
         <br>
         <br>
          I really like work in group and alone and I consider myself a person who always tries to solve any problem.
