--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2"><h1>Daniele Puleri</h1></div>
-                <div class="text-3"><h1>and I'm a Full <span>Stack Developer</span></h1></div>
+                <div class="text-3"><h1>and I'm a Junior  Full <span>Stack Developer</span></h1></div>
                 <br>
                 <br>
                 <div class="image">
