--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <br>
                 <br>
                 <div class="image">
-                <img src="assets/images/daniele.jpg" alt="foto profilo">
+                <img src="assets/images/DP.png" alt="profile pic">
                 </div>
             </div>
         </div>
