--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@600&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">  <!--favicon della guida-->
+   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">  
    <link rel="stylesheet"href="assets/css/styles.css">
    <h1><title>Daniele Puleri</title></h1>
 </head>
@@ -34,7 +34,7 @@
   <br>
   <br>
   <br>
-    <!-- sezione home -->
+    <!-- home -->
  <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -68,15 +68,14 @@
   <br>
   <br>
   <br>
- <!---sezione skills-->
+ <!---kills-->
 <section class="skills" id="skills">
   <div class="max-width">
     <div class="wrapper"></div>
     <div class="container"></div>
       <div class="box">
         <h2 class="title">Skills</h2>
-        <img src="assets/images/html-5.png"alt="logo html">
-        <img src="assets/images/css-3.png"alt="logo css">
+        <img src="assets/images/3lag.png"alt="logos">
         <img src="assets/images/Bootstrap.png"alt="logo bootstrap">
         <img src="assets/images/sass.png"alt="logo sass">
         <br>
