--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <img src="assets/images/3lag.png"alt="logos">
         <img src="assets/images/Bootstrap.png"alt="logo bootstrap">
         <img src="assets/images/sass.png"alt="logo sass">
+        <img src="assets/images/reactlogo.png"alt="logo react">
         <br>
         <br>
         <p> My skills & experiences.</p>
