--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <br>
   <br>
   <br>
- <!---kills-->
+ <!---skills-->
 <section class="skills" id="skills">
   <div class="max-width">
     <div class="wrapper"></div>
@@ -67,17 +67,13 @@
         <img src="assets/images/Bootstrap.png"alt="logo bootstrap">
         <img src="assets/images/sass.png"alt="logo sass">
         <img src="assets/images/reactlogo.png"alt="logo react">
+        <img src="assets/images/reduxlogo.png"alt="logo redux">
         <br>
         <br>
         <p> My skills & experiences.</p>
        </div>
      </div>
-  <!--sezione portfolio-->
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+  <!--portfolio-->
   <section class="portfolio" id="portfolio">
       <div class="max-width">
       <div class="wrapper"></div>
