--- a/index.html
+++ b/index.html
@@ -2,113 +2,285 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@600&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">  
-   <link rel="stylesheet"href="assets/css/styles.css">
-   <h1><title>Daniele Puleri</title></h1>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:wght@600&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">  
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <title>Daniele Puleri</title>
+  <style>
+    /* Add CSS for better scrolling experience */
+    html {
+      scroll-behavior: smooth;
+    }
+    /* Add CSS for skills section */
+    .skills {
+      padding: 50px 0;
+      background-color: #f7f7f7;
+      text-align: center;
+    }
+    .skills .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+    .skills .box {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+    }
+    .skills .box:hover {
+      transform: translateY(-10px);
+      box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.1);
+    }
+    .skills .box img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    .skills .box p {
+      color: #888;
+      font-size: 16px;
+      line-height: 1.5;
+    }
+    /* Add CSS for portfolio section */
+    .portfolio {
+      padding: 50px 0;
+      background-color: #f0f0f0;
+      text-align: center;
+    }
+    .portfolio .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+    }
+    .portfolio .box {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+    }
+    .portfolio .box:hover {
+      transform: translateY(-10px);
+      box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.1);
+    }
+    .portfolio .box img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    .portfolio .box a {
+      color: #e52b50;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    .portfolio .box a:hover {
+      color: #d0103a;
+    }
+  </style>
 </head>
 <body>
   <header>
-        <nav class="navbar">
-        <div class="logo"><a>D<span>P</span></a></div>
-          <input type="checkbox" id="click">
-          <label for="click" class="menu-btn">
-          <i class="fas fa-bars"></i>
-          </label>
-         <ul class="menu">
-        <li><a href="#home"class="menu-btn">Home</a></li>
-        <li><a href="about.html"class="menu-btn">About</a></li>
-        <li><a href="#skills"class="menu-btn">Skills</a></li>
-        <li><a href="#portfolio"class="menu-btn">Portfolio</a></li>
-        <li><a href="contact.html"class="menu-btn">Contact</a></li>
+    <nav class="navbar">
+      <div class="logo"><a>D<span>P</span></a></div>
+      <input type="checkbox" id="click">
+      <label for="click" class="menu-btn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul class="menu">
+        <li><a href="#home" class="menu-btn">Home</a></li>
+        <li><a href="about.html" class="menu-btn">About</a></li>
+        <li><a href="#skills" class="menu-btn">Skills</a></li>
+        <li><a href="#portfolio" class="menu-btn">Portfolio</a></li>
+        <li><a href="contact.html" class="menu-btn">Contact</a></li>
       </ul>
     </nav>
   </header>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-    <!-- home -->
- <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2"><h1>Daniele Puleri</h1></div>
-                <div class="text-3"><h1>and I'm a Junior  Full <span>Stack Developer</span></h1></div>
-                <br>
-                <br>
-                <div class="image">
-                <img src="assets/images/DP.png" alt="profile pic">
-                </div>
-            </div>
+
+  <section class="home" id="home">
+    <div class="max-width">
+      <div class="home-content">
+        <div class="text-1">Hello, my name is</div>
+        <div class="text-2"><h1>Daniele Puleri</h1></div>
+        <div class="text-3">and I'm a <span class="typed-text"></span><span class="cursor">&nbsp;</span></div>
+        <br>
+        <br>
+        <div class="image">
+          <img src="assets/images/DP.png" alt="profile pic">
         </div>
-    </section>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
- <!---skills-->
-<section class="skills" id="skills">
-  <div class="max-width">
-    <div class="wrapper"></div>
-    <div class="container"></div>
-      <div class="box">
-        <h2 class="title">Skills</h2>
-        <img src="assets/images/3lag.png"alt="logos">
-        <img src="assets/images/Bootstrap.png"alt="logo bootstrap">
-        <img src="assets/images/sass.png"alt="logo sass">
-        <img src="assets/images/reactlogo.png"alt="logo react">
-        <img src="assets/images/reduxlogo.png"alt="logo redux">
-        <br>
-        <br>
-        <p> My skills & experiences.</p>
-       </div>
-     </div>
-  <!--portfolio-->
-  <section class="portfolio" id="portfolio">
-      <div class="max-width">
-      <div class="wrapper"></div>
-      <div class="container"></div>
-      <div class="box">
-        <h2 class="title">Portfolio</h2>
-    <br>
-    <img src="assets/images/workinprogress.png"alt="work in progress">
-     <br>
-     <br>
-  </div>
+      </div>
     </div>
   </section>
-  <br>
-  <br>
-  <br>
-   <!-- footer -->
-   <footer>
-    <br>
+
+  <section class="skills" id="skills">
+    <div class="max-width">
+      <h2 class="title">Skills</h2>
+      <div class="container">
+        <div class="box">
+          <img src="assets/images/htmlogo.png" alt="HTML Logo">
+          <p>HTML</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/csslogo.png" alt="CSS Logo">
+          <p>CSS</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/javascriptlogo.png" alt="JavaScript Logo">
+          <p>JavaScript</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/bootstraplogo.png" alt="Bootstrap Logo">
+          <p>Bootstrap</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/sasslogo.png" alt="Sass Logo">
+          <p>Sass</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/reactlogo.png" alt="React Logo">
+          <p>React</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/reduxlogo.png" alt="Redux Logo">
+          <p>Redux</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/nodejslogo.png" alt="Node.js Logo">
+          <p>Node.js</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/mongodblogo.png" alt="MongoDB Logo">
+          <p>MongoDB</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/mysqlogo.png" alt="MySQL Logo">
+          <p>MySQL</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/expresslogo.png" alt="Express.js Logo">
+          <p>Express.js</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/webpacklogo.png" alt="Webpack Logo">
+          <p>Webpack</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/sequelizelogo.svg" alt="Sequelize Logo">
+          <p>Sequelize</p>
+        </div>
+        <div class="box">
+          <img src="assets/images/gitlogo.png" alt="Git Logo">
+          <p>Git</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- Portfolio Section Styles -->
+<section class="portfolio" id="portfolio">
+  <div class="max-width">
+    <h2 class="title">Portfolio</h2>
+    <div class="container">
+      <div class="box">
+        <a href="https://github.com/DPdotexe/DirectPlates">
+          <img src="assets/images/directplatesminiatura.png" alt="DirectPlates">
+          <p>DirectPlates</p>
+        </a>
+      </div>
+      <div class="box">
+        <a href="https://github.com/DPdotexe/VeggieGourmet">
+          <img src="assets/images/veggiegourmet.png" alt="VeggieGourmet">
+          <p>VeggieGourmet</p>
+        </a>
+      </div>
+      <div class="box">
+        <a href="https://github.com/DPdotexe/DPs-Open-Library">
+          <img src="assets/images/dpopenlibrary.png" alt="openlibrary">
+          <p>DPs Open Library </p>
+        </a>
+      </div>
+      <div class="box">
+        <a href="https://github.com/DPdotexe/HarvestHub">
+          <img src="assets/images/harvesthub.png" alt="HarvestHub">
+          <p>HarvestHub</p>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  <!-- footer -->
+  <footer>
     <div class="col-md-3 col-sm-6">
       <div class="col-md-12 copy"></div>
-            <h4><span>Socials</span></h4>
-            <br>
-            <ul class="social-network social-circle">
-             <li><a href="https://github.com/DPdotexe" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
-             <li><a href="https://www.linkedin.com/in/daniele-p-099008241" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
+      <h4><span>Socials</span></h4>
+      <br>
+      <ul class="social-network social-circle">
+        <li><a href="https://github.com/DPdotexe" class="icoGithub" title="Github"><i class="fa fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/danielepuleri" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+      </ul>
     </div>
     <br>
     <div class="row">
-    <div class="col-md-12 copy">
-      <span><p class="text-center">&copy; Copyright 2022 - DP.  All rights reserved.</p></span>
+      <div class="col-md-12 copy">
+        <span><p class="text-center">&copy; Copyright 2022 - DP. All rights reserved.</p></span>
+      </div>
     </div>
-  </div>
-</footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <script>
+    const typedTextSpan = document.querySelector(".typed-text");
+    const cursorSpan = document.querySelector(".cursor");
+
+    const textArray = ["Junior Full Stack Developer", "Junior Front-End Developer", "Junior Back-End Developer"];
+    const typingDelay = 200;
+    const erasingDelay = 100;
+    const newTextDelay = 2000; // Delay between current and next text
+    let textArrayIndex = 0;
+    let charIndex = 0;
+
+    function type() {
+      if (charIndex < textArray[textArrayIndex].length) {
+        if (!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
+        typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex);
+        charIndex++;
+        setTimeout(type, typingDelay);
+      } 
+      else {
+        cursorSpan.classList.remove("typing");
+        setTimeout(erase, newTextDelay);
+      }
+    }
+
+    function erase() {
+      if (charIndex > 0) {
+        if (!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
+        typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex-1);
+        charIndex--;
+        setTimeout(erase, erasingDelay);
+      } 
+      else {
+        cursorSpan.classList.remove("typing");
+        textArrayIndex++;
+        if(textArrayIndex>=textArray.length) textArrayIndex=0;
+        setTimeout(type, typingDelay + 1100);
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", function() { // On DOM Load initiate the effect
+      if(textArray.length) setTimeout(type, newTextDelay + 250);
+    });
+  </script>
 </body>
 </html>
